# cerebrum-mcp

./: Cargo.toml  HANDOFF.md  PHASE3_COMPLETION.md  PLAN.md  PROJECT_COMPLETION_REPORT.md  README.md  flake.nix  result  tarpaulin.toml
coverage/: tarpaulin-report.html
crates/cerebrum/: Cargo.toml
crates/cerebrum-core/: Cargo.toml
crates/cerebrum-core/data/cerebrum/__manifest/_transactions/: 0-8f4fe21a-d9a4-43f8-83ef-43734135fd28.txn
crates/cerebrum-core/data/cerebrum/memories.lance/_transactions/: 0-d4f16eb5-0735-41ff-97ed-a2c345d2713c.txn
crates/cerebrum-core/src/: config.rs  cortex.rs  decay.rs  embedder.rs  fastembed_embedder.rs  lancedb_cortex.rs  lib.rs  migration.rs  models.rs  observability.rs  orchestrator.rs  promotion.rs  resilience.rs  synapse.rs  traits.rs  utils.rs
crates/cerebrum-core/tests/: integration_tests.rs  mcp_integration_tests.rs  ollama_integration_tests.rs  phase4_coverage_tests.rs  phase5_integration_tests.rs  tier_integration_tests.rs
crates/cerebrum/src/: main.rs  mcp_server.rs
docs/: architecture.md  phase-2-plan.md  phase-4-plan.md
