[package]
name = "cerebrum-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
lancedb = "0.30"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

