[package]
name = "cerebrum"
version = "0.1.0"
edition = "2021"

[dependencies]
cerebrum-core = { path = "../cerebrum-core" }
tokio = { version = "1", features = ["full"] }
rmcp = "0.1.0" # Placeholder for the MCP library
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "cerebrum"
path = "src/main.rs"

[profile.test]
opt-level = 1

