[package]
name = "cerebrum"
version = "0.1.0"
edition = "2021"

[dependencies]
cerebrum-core = { path = "../cerebrum-core" }
tokio = { version = "1", features = ["full"] }
rmcp = { version = "1.8.0", features = ["transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "cerebrum"
path = "src/main.rs"

[profile.test]
opt-level = 1

